<resources>
    <string name="app_name">CryptoTracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_price_monitoring">Monitoraggio Prezzi</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_profile">Profilo</string>
    <string name="menu_wallet">Wallet</string>
    <string name="menu_exchange">Conversione Crypto</string>
    <string name="menu_settings">Impostazioni</string>
    <string name="name_reg">Nome:</string>
    <string name="title_activity_wallet_settings">WalletSettings</string>
    <string name="tab_text_1">Modifica</string>
    <string name="tab_text_2">Cancella</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="title_activity_modify_wallet">ModifyWallet</string>
    <string name="indirizzo">Indirizzo</string>
    <string name="blockchain">BlockChain</string>
    <string name="cancella_un_indirizzo">Cancella un Indirizzo</string>
    <string name="yes">Conferma</string>
    <string name="no">Cancella\n</string>
    <string name="title_activity_full_screen_price_token">FullScreenPriceToken</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="surname">Cognome</string>
    <string name="change_password">Cambio Password</string>
    <string name="name">Nome</string>
    <string name="confirm">Conferma</string>
    <string name="email">Email</string>
    <string name="modifica_indirizzo">Modifica</string>
    <string name="delete_indirizzo">Cancella</string>

</resources>