<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.cryptotracker.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.cryptotracker.ui.gallery.PriceMonitoring"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.cryptotracker.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.cryptotracker.Logout"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_wallet"
        android:name="com.example.cryptotracker.Logout"
        android:label="@string/menu_wallet"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.cryptotracker.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_gallery" />
</navigation>